--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 <div><span>Don't like the debaters?</span></div>
                 <div><button>Change</button></div>
             </div>
+
+            <div id="loader"></div>
         </div>
     </div>
 
